objects/ChatterJanitorSetting__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Limit_No_of_Type__c</fullName>
        <label>Delete Posts Older Than</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Limit_Type__c</fullName>
        <label>Interval</label>
        <picklist>
            <picklistValues>
                <fullName>Day(s)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Month(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year(s)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Archival__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Archival</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Skip_Tracked_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Tracked Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_Written_Posts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Written Posts</label>
        <type>Checkbox</type>
    </fields>
    <label>ChatterJanitorSetting</label>
    <nameField>
        <displayFormat>CJS-{000}</displayFormat>
        <label>Setting ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ChatterJanitorSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>